--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "Phan Hai Ha",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.2.4"
+    "mongoose": "^8.2.4",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
